refactor: Move to main.nf for ease of launching and clean up nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,4 @@
-dag {
-    enabled = true
-    file = 'results/dag.svg'
+params {
+    fasta = null
+    targetseq = null
 }
-
-report {
-    enabled = true
-    file = 'results/report.html'
-}
-
