test: Add test profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,3 +2,12 @@ params {
     fasta = null
     targetseq = null
 }
+
+profiles {
+    test {
+        params {
+            fasta = "${projectDir}/examples/example.fa"
+            targetseq = "ATGGGAGGAGAAGGGTATCGCGG"
+        }
+    }
+}
