build: Add nf-schema

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,5 @@
 params {
+    input = null
     fasta = null
     targetseq = null
 }
@@ -13,4 +14,14 @@ profiles {
             targetseq = "ATGGGAGGAGAAGGGTATCGCGG"
         }
     }
+    test_multi {
+        params {
+            fasta = "https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/genome.fasta"
+            input = "${projectDir}/assets/samplesheet.csv"
+        }
+    }
+}
+
+plugins {
+    id 'nf-schema@2.0.0'
 }
