Add utd_ganymede config

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,17 @@ profiles {
             input = "${projectDir}/assets/samplesheet.csv"
         }
     }
+    utd_ganymede {
+        docker.enabled = false
+        includeConfig "https://raw.githubusercontent.com/nf-core/configs/master/conf/utd_ganymede.config"
+        wave.strategy = ["conda", "container"]
+        singularity.registry = 'quay.io'
+        process {
+            cpus = 16
+            memory = 28.GB
+            time = 24.h
+        }
+    }
 }
 
 plugins {
