--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ profiles {
     test {
         params {
             fasta = "${projectDir}/examples/example.fa"
-            targetseq = "ATGGGAGGAGAAGGGTATCGCGG"
+            input = "${projectDir}/examples/samplesheet.csv"
         }
     }
     test_multi {
