chore: Remove all publishDir and cache stuff

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,7 @@ params {
     input = null
     fasta = null
     targetseq = null
+    outdir = "results"
 }
 
 docker.enabled = true
@@ -36,4 +37,14 @@ profiles {
 
 plugins {
     id 'nf-schema@2.0.0'
+}
+
+process {
+
+    publishDir = [
+        path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+        mode: params.publish_dir_mode,
+        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+    ]
+
 }
