chore: Add manifest
Mainly for defaultBranch

--- a/nextflow.config
+++ b/nextflow.config
@@ -48,3 +48,11 @@ process {
     ]
 
 }
+
+manifest {
+    defaultBranch = "main"
+    homePage = "https://github.com/Functional-Genomics-Lab/primer3-nf"
+    name = "primer3-nf"
+    nextflowVersion = ">=24.04.0"
+    version = "1.0.0dev"
+}
