fix: Update publishing

--- a/nextflow.config
+++ b/nextflow.config
@@ -40,13 +40,16 @@ plugins {
 }
 
 process {
-
     publishDir = [
-        path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-        mode: 'copy', // HACK hardcoded
-        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        enabled: false
     ]
 
+    withName: primer3_results2fasta {
+        publishDir = [
+            path: { "${params.outdir}/primers" },
+            mode: 'copy', // HACK hardcoded
+        ]
+    }
 }
 
 manifest {
