fix: Publish primer3 results

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,9 +44,15 @@ process {
         enabled: false
     ]
 
+    withName: primer3_calc {
+        publishDir = [
+            path: { "${params.outdir}/primer3" },
+            mode: 'copy', // HACK hardcoded
+        ]
+    }
     withName: primer3_results2fasta {
         publishDir = [
-            path: { "${params.outdir}/primers" },
+            path: { "${params.outdir}/primer_fastas" },
             mode: 'copy', // HACK hardcoded
         ]
     }
